--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require": {
       "php": ">=7.4",
-      "illuminate/support": "^8.0|^9.0|^10.0",
+      "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
       "guzzlehttp/guzzle": "^7.0",
       "firebase/php-jwt": "^6.0"
     }
